generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  admin
  manager
  sales
  accountant
  warehouse

  @@map("user_role")
}

enum CustomerType {
  individual
  company

  @@map("customer_type")
}

enum CustomerStatus {
  lead
  active
  inactive
  blocked

  @@map("customer_status")
}

enum AddressType {
  billing
  shipping
  other

  @@map("address_type")
}

enum OpportunityStatus {
  open
  won
  lost

  @@map("opportunity_status")
}

enum QuoteStatus {
  draft
  sent
  accepted
  rejected
  expired

  @@map("quote_status")
}

enum SalesOrderStatus {
  draft
  confirmed
  processing
  fulfilled
  cancelled

  @@map("sales_order_status")
}

enum InventoryMovementType {
  stock_in @map("in")
  stock_out @map("out")
  transfer
  adjustment
  reservation

  @@map("inventory_movement_type")
}

enum DeliveryStatus {
  pending
  picking
  shipped
  delivered
  failed
  cancelled

  @@map("delivery_status")
}

enum InvoiceStatus {
  draft
  issued
  partially_paid
  paid
  overdue
  void

  @@map("invoice_status")
}

enum PaymentMethod {
  cash
  bank_transfer
  card
  other

  @@map("payment_method")
}

enum PaymentStatus {
  pending
  confirmed
  failed
  refunded

  @@map("payment_status")
}

model User {
  id            String         @id @default(uuid()) @db.Uuid
  name          String         @db.VarChar(120)
  email         String         @unique @db.VarChar(255)
  passwordHash  String         @map("password_hash")
  role          UserRole       @default(sales)
  phone         String?        @db.VarChar(32)
  isActive      Boolean        @default(true) @map("is_active")
  lastLoginAt   DateTime?      @map("last_login_at") @db.Timestamptz(6)
  createdAt     DateTime       @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime       @updatedAt @map("updated_at") @db.Timestamptz(6)
  customers     Customer[]     @relation("CustomerOwner")
  opportunities Opportunity[]  @relation("OpportunityOwner")
  quotes        Quote[]        @relation("QuoteCreator")
  salesOrders   SalesOrder[]   @relation("SalesOrderCreator")
  activityLogs  ActivityLog[]  @relation("ActivityActor")

  @@map("app_user")
}

model Customer {
  id              String            @id @default(uuid()) @db.Uuid
  ownerId         String?           @map("owner_id") @db.Uuid
  code            String            @unique @db.VarChar(32)
  name            String            @db.VarChar(200)
  type            CustomerType
  taxCode         String?           @unique @map("tax_code") @db.VarChar(64)
  email           String?           @db.VarChar(255)
  phone           String?           @db.VarChar(32)
  status          CustomerStatus    @default(lead)
  creditLimit     Decimal           @default(0) @map("credit_limit") @db.Decimal(18, 2)
  paymentTermDays Int               @default(0) @map("payment_term_days")
  createdAt       DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt       DateTime          @updatedAt @map("updated_at") @db.Timestamptz(6)
  owner           User?             @relation("CustomerOwner", fields: [ownerId], references: [id], onDelete: SetNull)
  contacts        CustomerContact[]
  addresses       CustomerAddress[]
  opportunities   Opportunity[]
  quotes          Quote[]
  salesOrders     SalesOrder[]

  @@index([ownerId])
  @@index([status])
  @@index([name])
  @@map("customer")
}

model CustomerContact {
  id         String   @id @default(uuid()) @db.Uuid
  customerId String   @map("customer_id") @db.Uuid
  name       String   @db.VarChar(120)
  title      String?  @db.VarChar(120)
  email      String?  @db.VarChar(255)
  phone      String?  @db.VarChar(32)
  isPrimary  Boolean  @default(false) @map("is_primary")
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt  DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)
  customer   Customer @relation(fields: [customerId], references: [id], onDelete: Cascade)

  @@index([customerId])
  @@map("customer_contact")
}

model CustomerAddress {
  id         String       @id @default(uuid()) @db.Uuid
  customerId String       @map("customer_id") @db.Uuid
  type       AddressType
  line1      String       @db.VarChar(255)
  line2      String?      @db.VarChar(255)
  ward       String?      @db.VarChar(120)
  district   String?      @db.VarChar(120)
  city       String       @db.VarChar(120)
  country    String       @default("Vietnam") @db.VarChar(120)
  isDefault  Boolean      @default(false) @map("is_default")
  createdAt  DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt  DateTime     @updatedAt @map("updated_at") @db.Timestamptz(6)
  customer   Customer     @relation(fields: [customerId], references: [id], onDelete: Cascade)
  billedOrders SalesOrder[] @relation("BillingAddress")
  shippedOrders SalesOrder[] @relation("ShippingAddress")

  @@index([customerId])
  @@map("customer_address")
}

model SalesPipeline {
  id        String          @id @default(uuid()) @db.Uuid
  name      String          @unique @db.VarChar(120)
  isActive  Boolean         @default(true) @map("is_active")
  createdAt DateTime        @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime        @updatedAt @map("updated_at") @db.Timestamptz(6)
  stages    PipelineStage[]

  @@map("sales_pipeline")
}

model PipelineStage {
  id          String          @id @default(uuid()) @db.Uuid
  pipelineId  String          @map("pipeline_id") @db.Uuid
  name        String          @db.VarChar(120)
  sortOrder   Int             @map("sort_order")
  probability Decimal         @default(0) @db.Decimal(5, 2)
  isWonStage  Boolean         @default(false) @map("is_won_stage")
  isLostStage Boolean         @default(false) @map("is_lost_stage")
  createdAt   DateTime        @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime        @updatedAt @map("updated_at") @db.Timestamptz(6)
  pipeline    SalesPipeline   @relation(fields: [pipelineId], references: [id], onDelete: Cascade)
  opportunities Opportunity[]

  @@unique([pipelineId, name])
  @@unique([pipelineId, sortOrder])
  @@map("pipeline_stage")
}

model Opportunity {
  id                String            @id @default(uuid()) @db.Uuid
  customerId        String            @map("customer_id") @db.Uuid
  ownerId           String            @map("owner_id") @db.Uuid
  stageId           String            @map("stage_id") @db.Uuid
  code              String            @unique @db.VarChar(32)
  title             String            @db.VarChar(200)
  estimatedValue    Decimal           @default(0) @map("estimated_value") @db.Decimal(18, 2)
  expectedCloseDate DateTime?         @map("expected_close_date") @db.Date
  source            String?           @db.VarChar(120)
  status            OpportunityStatus @default(open)
  lostReason        String?           @map("lost_reason")
  createdAt         DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt         DateTime          @updatedAt @map("updated_at") @db.Timestamptz(6)
  customer          Customer          @relation(fields: [customerId], references: [id], onDelete: Restrict)
  owner             User              @relation("OpportunityOwner", fields: [ownerId], references: [id], onDelete: Restrict)
  stage             PipelineStage     @relation(fields: [stageId], references: [id], onDelete: Restrict)
  quotes            Quote[]

  @@index([customerId])
  @@index([ownerId])
  @@index([stageId])
  @@index([status])
  @@map("opportunity")
}

model ProductCategory {
  id          String            @id @default(uuid()) @db.Uuid
  parentId    String?           @map("parent_id") @db.Uuid
  name        String            @unique @db.VarChar(120)
  description String?
  isActive    Boolean           @default(true) @map("is_active")
  createdAt   DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime          @updatedAt @map("updated_at") @db.Timestamptz(6)
  parent      ProductCategory?  @relation("CategoryTree", fields: [parentId], references: [id], onDelete: SetNull)
  children    ProductCategory[] @relation("CategoryTree")
  products    Product[]

  @@map("product_category")
}

model Product {
  id                 String              @id @default(uuid()) @db.Uuid
  categoryId         String?             @map("category_id") @db.Uuid
  sku                String              @unique @db.VarChar(64)
  name               String              @db.VarChar(200)
  unit               String              @db.VarChar(32)
  listPrice          Decimal             @map("list_price") @db.Decimal(18, 2)
  costPrice          Decimal             @default(0) @map("cost_price") @db.Decimal(18, 2)
  taxRate            Decimal             @default(0) @map("tax_rate") @db.Decimal(5, 2)
  reorderLevel       Int                 @default(0) @map("reorder_level")
  isActive           Boolean             @default(true) @map("is_active")
  createdAt          DateTime            @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt          DateTime            @updatedAt @map("updated_at") @db.Timestamptz(6)
  category           ProductCategory?    @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  quoteItems         QuoteItem[]
  salesOrderItems    SalesOrderItem[]
  inventoryBalances  InventoryBalance[]
  inventoryMovements InventoryMovement[]

  @@index([categoryId])
  @@map("product")
}

model Quote {
  id             String       @id @default(uuid()) @db.Uuid
  customerId     String       @map("customer_id") @db.Uuid
  opportunityId  String?      @map("opportunity_id") @db.Uuid
  createdById    String       @map("created_by_id") @db.Uuid
  code           String       @unique @db.VarChar(32)
  status         QuoteStatus  @default(draft)
  quoteDate      DateTime     @default(now()) @map("quote_date") @db.Date
  validUntil     DateTime?    @map("valid_until") @db.Date
  subtotal       Decimal      @default(0) @db.Decimal(18, 2)
  discountAmount Decimal      @default(0) @map("discount_amount") @db.Decimal(18, 2)
  taxAmount      Decimal      @default(0) @map("tax_amount") @db.Decimal(18, 2)
  totalAmount    Decimal      @default(0) @map("total_amount") @db.Decimal(18, 2)
  note           String?
  createdAt      DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt      DateTime     @updatedAt @map("updated_at") @db.Timestamptz(6)
  customer       Customer     @relation(fields: [customerId], references: [id], onDelete: Restrict)
  opportunity    Opportunity? @relation(fields: [opportunityId], references: [id], onDelete: SetNull)
  createdBy      User         @relation("QuoteCreator", fields: [createdById], references: [id], onDelete: Restrict)
  items          QuoteItem[]
  salesOrder     SalesOrder?

  @@index([customerId])
  @@index([opportunityId])
  @@index([status])
  @@map("quote")
}

model QuoteItem {
  id             String  @id @default(uuid()) @db.Uuid
  quoteId        String  @map("quote_id") @db.Uuid
  productId      String  @map("product_id") @db.Uuid
  quantity       Int
  unitPrice      Decimal @map("unit_price") @db.Decimal(18, 2)
  discountAmount Decimal @default(0) @map("discount_amount") @db.Decimal(18, 2)
  taxAmount      Decimal @default(0) @map("tax_amount") @db.Decimal(18, 2)
  lineTotal      Decimal @map("line_total") @db.Decimal(18, 2)
  quote          Quote   @relation(fields: [quoteId], references: [id], onDelete: Cascade)
  product        Product @relation(fields: [productId], references: [id], onDelete: Restrict)

  @@index([quoteId])
  @@index([productId])
  @@map("quote_item")
}

model SalesOrder {
  id                   String           @id @default(uuid()) @db.Uuid
  customerId           String           @map("customer_id") @db.Uuid
  quoteId              String?          @unique @map("quote_id") @db.Uuid
  createdById          String           @map("created_by_id") @db.Uuid
  billingAddressId     String?          @map("billing_address_id") @db.Uuid
  shippingAddressId    String?          @map("shipping_address_id") @db.Uuid
  code                 String           @unique @db.VarChar(32)
  status               SalesOrderStatus @default(draft)
  orderDate            DateTime         @default(now()) @map("order_date") @db.Date
  expectedDeliveryDate DateTime?        @map("expected_delivery_date") @db.Date
  subtotal             Decimal          @default(0) @db.Decimal(18, 2)
  discountAmount       Decimal          @default(0) @map("discount_amount") @db.Decimal(18, 2)
  taxAmount            Decimal          @default(0) @map("tax_amount") @db.Decimal(18, 2)
  totalAmount          Decimal          @default(0) @map("total_amount") @db.Decimal(18, 2)
  note                 String?
  createdAt            DateTime         @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt            DateTime         @updatedAt @map("updated_at") @db.Timestamptz(6)
  customer             Customer         @relation(fields: [customerId], references: [id], onDelete: Restrict)
  quote                Quote?           @relation(fields: [quoteId], references: [id], onDelete: SetNull)
  createdBy            User             @relation("SalesOrderCreator", fields: [createdById], references: [id], onDelete: Restrict)
  billingAddress       CustomerAddress? @relation("BillingAddress", fields: [billingAddressId], references: [id], onDelete: SetNull)
  shippingAddress      CustomerAddress? @relation("ShippingAddress", fields: [shippingAddressId], references: [id], onDelete: SetNull)
  items                SalesOrderItem[]
  deliveries           Delivery[]
  invoice              Invoice?

  @@index([customerId])
  @@index([status])
  @@map("sales_order")
}

model SalesOrderItem {
  id             String     @id @default(uuid()) @db.Uuid
  salesOrderId   String     @map("sales_order_id") @db.Uuid
  productId      String     @map("product_id") @db.Uuid
  quantity       Int
  unitPrice      Decimal    @map("unit_price") @db.Decimal(18, 2)
  discountAmount Decimal    @default(0) @map("discount_amount") @db.Decimal(18, 2)
  taxAmount      Decimal    @default(0) @map("tax_amount") @db.Decimal(18, 2)
  lineTotal      Decimal    @map("line_total") @db.Decimal(18, 2)
  salesOrder     SalesOrder @relation(fields: [salesOrderId], references: [id], onDelete: Cascade)
  product        Product    @relation(fields: [productId], references: [id], onDelete: Restrict)

  @@index([salesOrderId])
  @@index([productId])
  @@map("sales_order_item")
}

model Warehouse {
  id                 String              @id @default(uuid()) @db.Uuid
  code               String              @unique @db.VarChar(32)
  name               String              @db.VarChar(120)
  address            String?
  isActive           Boolean             @default(true) @map("is_active")
  createdAt          DateTime            @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt          DateTime            @updatedAt @map("updated_at") @db.Timestamptz(6)
  inventoryBalances  InventoryBalance[]
  inventoryMovements InventoryMovement[]

  @@map("warehouse")
}

model InventoryBalance {
  id                String    @id @default(uuid()) @db.Uuid
  warehouseId       String    @map("warehouse_id") @db.Uuid
  productId         String    @map("product_id") @db.Uuid
  quantityOnHand    Int       @default(0) @map("quantity_on_hand")
  quantityReserved  Int       @default(0) @map("quantity_reserved")
  quantityAvailable Int       @default(0) @map("quantity_available")
  updatedAt         DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)
  warehouse         Warehouse @relation(fields: [warehouseId], references: [id], onDelete: Cascade)
  product           Product   @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([warehouseId, productId])
  @@index([productId])
  @@map("inventory_balance")
}

model InventoryMovement {
  id            String                @id @default(uuid()) @db.Uuid
  warehouseId   String                @map("warehouse_id") @db.Uuid
  productId     String                @map("product_id") @db.Uuid
  type          InventoryMovementType
  quantity      Int
  referenceType String?               @map("reference_type") @db.VarChar(64)
  referenceId   String?               @map("reference_id") @db.Uuid
  note          String?
  createdAt     DateTime              @default(now()) @map("created_at") @db.Timestamptz(6)
  warehouse     Warehouse             @relation(fields: [warehouseId], references: [id], onDelete: Restrict)
  product       Product               @relation(fields: [productId], references: [id], onDelete: Restrict)

  @@index([productId])
  @@index([referenceType, referenceId])
  @@map("inventory_movement")
}

model Delivery {
  id             String         @id @default(uuid()) @db.Uuid
  salesOrderId   String         @map("sales_order_id") @db.Uuid
  code           String         @unique @db.VarChar(32)
  status         DeliveryStatus @default(pending)
  plannedDate    DateTime?      @map("planned_date") @db.Date
  shippedDate    DateTime?      @map("shipped_date") @db.Date
  deliveredDate  DateTime?      @map("delivered_date") @db.Date
  carrier        String?        @db.VarChar(120)
  trackingNumber String?        @map("tracking_number") @db.VarChar(120)
  createdAt      DateTime       @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt      DateTime       @updatedAt @map("updated_at") @db.Timestamptz(6)
  salesOrder     SalesOrder     @relation(fields: [salesOrderId], references: [id], onDelete: Cascade)

  @@index([salesOrderId])
  @@map("delivery")
}

model Invoice {
  id           String        @id @default(uuid()) @db.Uuid
  salesOrderId String        @unique @map("sales_order_id") @db.Uuid
  code         String        @unique @db.VarChar(32)
  status       InvoiceStatus @default(draft)
  issuedDate   DateTime      @default(now()) @map("issued_date") @db.Date
  dueDate      DateTime      @map("due_date") @db.Date
  subtotal     Decimal       @default(0) @db.Decimal(18, 2)
  taxAmount    Decimal       @default(0) @map("tax_amount") @db.Decimal(18, 2)
  totalAmount  Decimal       @map("total_amount") @db.Decimal(18, 2)
  paidAmount   Decimal       @default(0) @map("paid_amount") @db.Decimal(18, 2)
  createdAt    DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)
  salesOrder   SalesOrder    @relation(fields: [salesOrderId], references: [id], onDelete: Restrict)
  payments     Payment[]

  @@index([status])
  @@map("invoice")
}

model Payment {
  id             String        @id @default(uuid()) @db.Uuid
  invoiceId      String        @map("invoice_id") @db.Uuid
  code           String        @unique @db.VarChar(32)
  method         PaymentMethod
  amount         Decimal       @db.Decimal(18, 2)
  paidDate       DateTime      @default(now()) @map("paid_date") @db.Date
  transactionRef String?       @map("transaction_ref") @db.VarChar(120)
  status         PaymentStatus @default(pending)
  note           String?
  createdAt      DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt      DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)
  invoice        Invoice       @relation(fields: [invoiceId], references: [id], onDelete: Restrict)

  @@index([invoiceId])
  @@map("payment")
}

model ActivityLog {
  id         String   @id @default(uuid()) @db.Uuid
  actorId    String?  @map("actor_id") @db.Uuid
  entityType String   @map("entity_type") @db.VarChar(64)
  entityId   String   @map("entity_id") @db.Uuid
  action     String   @db.VarChar(64)
  ipAddress  String?  @map("ip_address") @db.Inet
  userAgent  String?  @map("user_agent")
  metadata   Json     @default("{}")
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  actor      User?    @relation("ActivityActor", fields: [actorId], references: [id], onDelete: SetNull)

  @@index([actorId])
  @@index([entityType, entityId])
  @@index([createdAt])
  @@map("activity_log")
}
